<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:text="@string/button_text_linear"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:text="@string/button_text_relative"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:text="@string/button_text_constraint"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:text="@string/button_text_table"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:text="@string/button_text_frame_with_grid"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>
</ScrollView>