<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEnterFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        android:text="@string/text_feedback_form"
        android:textColor="@color/grey"
        android:textSize="28sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEnterFeedback"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameInputLayout"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/rlSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInputLayout"
        android:background="#D3CDCD">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spFeedbackType"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:paddingTop="20dp"
            android:prompt="@string/spinner_prompt"
            android:spinnerMode="dropdown"
            android:textAlignment="textStart"
            android:theme="@style/spinnerTheme" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedbackInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlSpinner"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text_details"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedbackInputLayout"
        android:layout_marginBottom="6dp"
        android:buttonTint="@color/white"
        android:text="@string/checkbox_text_response"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbResponse"
        android:padding="15dp"
        android:text="@string/button_text_send"
        android:textAllCaps="false"
        android:textSize="20sp" />

</RelativeLayout>