<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/text_feedback_form"
        android:textColor="@color/grey"
        android:textSize="28sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:paddingTop="22dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingTop="22dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="#D3CDCD"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spFeedbackType"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:paddingTop="20dp"
            android:prompt="@string/spinner_prompt"
            android:spinnerMode="dropdown"
            android:textAlignment="textStart"
            android:theme="@style/spinnerTheme" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedbackInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text_details"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="5"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:buttonTint="@color/white"
        android:text="@string/checkbox_text_response"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="15dp"
        android:text="@string/button_text_send"
        android:textAllCaps="false"
        android:textSize="20sp" />

</LinearLayout>