<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnListView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:padding="22dp"
        android:text="@string/button_text_listview_viewholder"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btnRecyclerView"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStart"
        app:layout_constraintRight_toRightOf="@id/guidelineEnd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="22dp"
        android:text="@string/button_text_recyclerview"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/btnLayoutManager"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStart"
        app:layout_constraintRight_toRightOf="@id/guidelineEnd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLayoutManager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="22dp"
        android:text="@string/button_text_layoutmanager_itemdecoration"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStart"
        app:layout_constraintRight_toRightOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnViewPager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:padding="22dp"
        android:text="@string/button_text_viewpager"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStart"
        app:layout_constraintRight_toRightOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/btnLayoutManager" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:padding="22dp"
        android:text="@string/button_text_bottomnavigation_expandable"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineStart"
        app:layout_constraintRight_toRightOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/btnViewPager" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="45dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="45dp" />

</androidx.constraintlayout.widget.ConstraintLayout>